--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section id="welcome-section" class="welcome-section">
       <h1>Hi I am Aldair</h1>
-      <p>a web developer</p>
+      <p>Actualmente estoy estudiando el programa de Técnico Profesional en Mantenimiento de Equipos de Cómputo, soy una persona con alta motivación por aprender, mejorar cada día mis habilidades de programación para lograr mi objetivo de ser Desarrollador FullStack, además de poder crecer como persona, Estoy orientada a la Objetividad, proactiva y detallista.</p>
     </section>
 
     <!-- END WELCOME SECTION -->
@@ -118,22 +118,23 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
-       <!-- <a
-          href="https://codepen.io/freeCodeCamp/full/wGqEga"
+       <a
+          href="https://www.freecodecamp.org/certification/AldairZambrano/responsive-web-design"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+            src="img/Captura de pantalla 2023-03-10 223232.jpg"
             alt="project"
           />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Wikipedia Viewer
+            Certificado freeCodeCamp
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
+        <!--  
         <a
           href="https://codepen.io/freeCodeCamp/full/KzXQgy"
           target="_blank"
